--- a/public/css.css
+++ b/public/css.css
@@ -91,6 +91,7 @@ video::-webkit-media-controls-fullscreen-button, video::-webkit-media-controls-p
     left: 0;
     margin: 8px;
     width: 260px;
+    font-size: 12px;
  }
 
 .hidden{
