--- a/public/css.css
+++ b/public/css.css
@@ -13,6 +13,10 @@ html, body {
     font-family: 'agave';
     font-size: 16px;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1, h2, h4, h5, h6 {
@@ -77,6 +81,10 @@ video::-webkit-media-controls-fullscreen-button, video::-webkit-media-controls-p
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    h1{
+        margin: 0;
+        padding: 0;
+    }
  }
 #status {
     position: fixed;
@@ -85,14 +93,24 @@ video::-webkit-media-controls-fullscreen-button, video::-webkit-media-controls-p
     transform: translateX(-50%);
     padding: auto;
 }
- #commercial{
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 8px;
-    width: 260px;
-    font-size: 12px;
- }
+
+main{
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 600px;
+
+}
+
+input{
+    width: calc(100% - 130px);
+    height: 30px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    padding: 5px;
+}
 
 .hidden{
     display: none;
@@ -129,4 +147,41 @@ body:hover .fullscreen-button {
 
 .fullscreen-button:hover {
     opacity: 1;
+}
+
+button{
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 15px 25px;
+    
+}
+
+.infobox{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    gap: 10px;
+
+    p{
+        margin: 0;
+        padding: 0;
+        margin-bottom: 10px;
+    }
+    a{
+        color: palegoldenrod
+        
+    }
+}
+
+@media screen and (max-width: 600px)  {
+    main{
+        width: 100%;
+    }
+    
 }
