--- a/public/css.css
+++ b/public/css.css
@@ -181,7 +181,9 @@ button{
 
 @media screen and (max-width: 600px)  {
     main{
-        width: 100%;
+        width: calc(100% - 80px);
+        margin-left: 40px;
+        margin-right: 40px;
     }
     
 }
